--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
   </header>
 
   <section class="banner">
-    <h2 class="banner__titulo">Já sabe por onde começar?</h2>
-    <p class="banner__texto">Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
-    <input type="search" class="banner__pesquisa" placeholder="Qual será sua próxima leitura?">
+    <h2 class="banner__titulo">Luís Felipe Vieira</h2>
+    <p class="banner__texto">2C</p>
+    <input type="search" class="banner__pesquisa" placeholder="Tecnologia e Robótica">
   </section>
 
   <section class="carrossel">
