--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </header>
 
   <section class="banner">
-    <h2 class="banner__titulo">Luís Felipe Vieira</h2>
+    <h2 class="banner__titulo">Miguel Borges de Andrade</h2>
     <p class="banner__texto">2C</p>
     <input type="search" class="banner__pesquisa" placeholder="Tecnologia e Robótica">
   </section>
